<resources>
    <string name="app_name">WildRift Dictionary</string>
    <string name="news">News</string>
    <string name="champion">Champion</string>
    <string name="item">Item</string>
    <string name="rune">Rune</string>
    <string name="image">Image</string>
    <string name="upgraded">Upgraded</string>
    <string name="mid_tier">Mid Tier</string>
    <string name="enchantments">Enchantments</string>
    <string name="basic">Basic</string>
    <string name="key_stone">Key Stone</string>
    <string name="domination">Domination</string>
    <string name="resolve">Resolve</string>
    <string name="inspiration">Inspiration</string>
    <string name="recommend_item">Recommend Item</string>
    <string name="recommend_rune">Recommend Rune</string>
    <string name="recommend_spell">Recommend Spell</string>
    <string name="ability">Ability</string>
    <string name="sub_ability">Sub Ability</string>
    <string name="skill">Skill</string>
    <string name="universe">Universe</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="stats">Stats</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="second">%ss</string>
    <string name="search">Search</string>
</resources>