<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.taetae98.wildriftdictionary.dto.Item" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#E6000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view"
            app:imageURL="@{item.image}"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/image_boots"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.WildRiftDictionary.Element.Name"
            android:id="@+id/name_text_view"
            android:text="@{item.name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/image_view"
            app:layout_constraintStart_toEndOf="@id/image_view"
            app:layout_constraintBottom_toTopOf="@id/cost_text_view"
            tools:text="@string/name"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.WildRiftDictionary.Element.Coin"
            android:id="@+id/cost_text_view"
            android:text="@{item.cost}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_text_view"
            app:layout_constraintStart_toEndOf="@id/image_view"
            app:layout_constraintBottom_toBottomOf="@id/image_view"
            tools:text="300"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.WildRiftDictionary.Element.Stats"
            android:id="@+id/stats_text_view"
            android:text="@{item.stats}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/stats"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.WildRiftDictionary.Element.Description"
            android:id="@+id/description_text_view"
            android:text="@{item.description}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stats_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>